<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:id="@+id/movieImage"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/ic_back"
        android:drawablePadding="10dp"
        android:text="Watch"

        android:textSize="13sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/movieImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/in_theaters_december_22_2021"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteY="193dp" />

        <Button
            android:id="@+id/btnGetTick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:background="@drawable/ic_btn_back_blue"
            android:text="@string/get_tickets"
            app:layout_constraintBottom_toTopOf="@+id/btnWatch"
            app:layout_constraintTop_toBottomOf="@+id/tvDate"
            tools:layout_editor_absoluteX="84dp" />

        <Button
            android:drawableStart="@drawable/ic_play"
            android:id="@+id/btnWatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/ic_empty_btn_back"
            android:text="@string/watch_trailer"
            app:layout_constraintEnd_toEndOf="@+id/btnGetTick"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btnGetTick"
            app:layout_constraintTop_toBottomOf="@+id/btnGetTick" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/movieImage"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:text="@string/genres"
            android:layout_height="wrap_content"/>


        <TextView
            android:padding="5dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:text="@string/overview"
            android:layout_height="wrap_content"/>


        <TextView
            android:padding="5dp"

            android:layout_width="wrap_content"
            android:text="As a collection of history's worst tyrants and criminal masterminds gather to plot a war to wipe out millions, one man must race against time to stop them. Discover the origins of the very first independent intelligence agency in The King's Man. The Comic Book “The Secret Service” by Mark Millar and Dave Gibbons."
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>