<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>
        <variable
            name="callback"
            type="com.tenTwenty.testapp.ui.movieDetail.MovieDetailsActivity"/>
        <variable
            name="model"
            type="com.tenTwenty.testapp.responseModel.movieDetail.MovieDetailsResponse" />

    </data>


    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"

        android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:orientation="vertical"

        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"

        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
       >




        <ImageView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@+id/movieImage"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />


        <TextView
            android:onClick="@{(view) -> callback.onBackClick(view)}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:drawableLeft="@drawable/ic_back"
            android:drawablePadding="10dp"
            android:text="Watch"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/primary_text_size"

            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/movieImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/primary_text_size"
                android:gravity="center"
                android:text="@{`In theaters `+model.releaseDate}"
                android:textColor="@android:color/white"

                app:layout_constraintEnd_toEndOf="parent"
                tools:layout_editor_absoluteY="193dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGetTick"
                android:fontFamily="@font/poppins_regular"
                android:onClick="@{(view) -> callback.onGeTicketsClick(view, model.id)}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:background="@drawable/ic_btn_back_blue"
                android:text="@string/get_tickets"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="@dimen/secondary_text_size"
                app:layout_constraintBottom_toTopOf="@+id/btnWatch"
                app:layout_constraintTop_toBottomOf="@+id/tvDate"
                tools:layout_editor_absoluteX="84dp" />

            <LinearLayout
                android:layout_width="wrap_content"
             android:gravity="center"
                android:layout_marginTop="10dp"
                android:onClick="@{(view) -> callback.onWatchClick(view,  model.id)}"
                android:background="@drawable/ic_empty_btn_back"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:src="@drawable/ic_play"
                    android:layout_gravity="center_vertical"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:fontFamily="@font/poppins_regular"
                    android:id="@+id/btnWatch"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:textSize="@dimen/secondary_text_size"
                    android:text="@string/watch_trailer"
                    app:layout_constraintEnd_toEndOf="@+id/btnGetTick"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/btnGetTick"
                    app:layout_constraintTop_toBottomOf="@+id/btnGetTick" />
            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="30dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/movieImage"
            tools:layout_editor_absoluteX="0dp">

            <TextView
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:text="@string/genres"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/primary_text_size"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/rvGenre"
                tools:itemCount="3"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:padding="5dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:text="@string/overview"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/primary_text_size"
                android:layout_height="wrap_content"/>


            <TextView
                android:padding="5dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/secondary_text_size"
                android:id="@+id/tvDetails"
                android:layout_width="wrap_content"
                android:text="@{model.overview}"
                android:layout_height="wrap_content"/>
        </LinearLayout>


    </LinearLayout>

        <FrameLayout


            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            />

    </RelativeLayout>


</layout>